[tool.poetry]
name = "viewdom"
version = "0.6.3"
description = "ViewDOM"
authors = ["Paul Everitt <pauleveritt@me.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pauleveritt/viewdom"
repository = "https://github.com/pauleveritt/viewdom"
documentation = "https://viewdom.readthedocs.io"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.urls]
Changelog = "https://github.com/pauleveritt/viewdom/releases"

[tool.poetry.dependencies]
python = "^3.9.1"
tagged = "^0.0.2"
venusian = "^3.0.0"
htm = "^0.1.1"
MarkupSafe = "^2.0.1"
hopscotch = ">=0.3.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
coverage = {extras = ["toml"], version = "^6.3"}
safety = "^1.10.3"
mypy = "^0.931"
xdoctest = {extras = ["colors"], version = "^0.15.10"}
sphinx = "^4.4.0"
sphinx-autobuild = "^2021.3.14"
pre-commit = "^2.17.0"
flake8 = "^4.0.1"
black = "^22.1"
flake8-bandit = "^3.0.0"
flake8-bugbear = "^22.1.11"
flake8-docstrings = "^1.6.0"
flake8-rst-docstrings = "^0.2.5"
pep8-naming = "^0.12.1"
darglint = "^1.8.1"
reorder-python-imports = "^2.7.1"
pre-commit-hooks = "^4.1.0"
Pygments = "^2.11.2"
pyupgrade = "^2.31.0"
nox = "^2022.1.7"
nox-poetry = "^0.9.0"
furo = "^2022.3.4"
myst-parser = "^0.17.0"
sybil = "^3.0.1"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["viewdom"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.pytest.ini_options]
addopts = "-p no:doctest"
testpaths = ["tests", "examples", "docs"]

[tool.mypy]
strict = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
