[project]
name = "viewdom"
description = "ViewDOM"
dynamic = ["version"]
build-targets = ["wheel"]
authors = [{ name = "Paul Everitt", email = "pauleveritt@me.com" }]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pauleveritt/viewdom"
repository = "https://github.com/pauleveritt/viewdom"
documentation = "https://viewdom.readthedocs.io"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.11"
dependencies = [
    "tagged~=0.0.2",
    "venusian~=3.1.0",
    "htm~=0.1.1",
    "MarkupSafe~=2.1.3",
    "hopscotch>=0.3.1"
]

[tool.hatch.urls]
Changelog = "https://github.com/pauleveritt/viewdom/releases"


[tool.hatch.version]
path = "src/viewdom/version.py"

[tool.hatch.envs.test]
dependencies = [
    "pytest~=7.4.3",
    "sybil~=3.0.1",
    "coverage[toml]~=6.3",
    "pytest-cov~=4.1.0",
    "ruff~=0.1.8",
    "ruff-lsp~=0.0.45",
    "sphinx~=4.4.0"
]

[tool.hatch.envs.pre-commit]
dependencies = [
    "ruff~=0.1.8",
    "pre-commit~=3.5.0",
    "pre-commit-hooks~=4.1.0",
]

[tool.hatch.envs.mypy]
dependencies = [
    "mypy~=1.7",
]
[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["viewdom"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.pytest.ini_options]
addopts = "-p no:doctest"
testpaths = ["tests", "examples", "docs"]

[tool.mypy]
strict = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.envs.safety]
dependencies = [
    "safety~=2.3.5",
]

[tool.hatch.envs.docs-build]
dependencies = [
    "sphinx~=4.4.0",
    "sphinx-autobuild~=2021.3.14",
    "Pygments~=2.11.2",
    "pyupgrade~=2.31.0",
    "furo~=2022.3.4",
    "myst-parser~=0.17.0",
    ]

[[tool.hatch.envs.test.matrix]]
python = ["3.11", "3.12"]

[[tool.hatch.envs.pre-commit.matrix]]
python = ["3.12"]

[[tool.hatch.envs.mypy.matrix]]
python = ["3.12"]

[[tool.hatch.envs.safety.matrix]]
python = ["3.12"]

[[tool.hatch.envs.docs-build.matrix]]
python = ["3.12"]

[tool.hatch.envs.test.scripts]
run = "pytest --cov-config=pyproject.toml --cov=pkg --cov=tests"
lint = "ruff check src/viewdom tests docs/conf.py && ruff format --check src/viewdom tests docs/conf.py"
format = "ruff check --fix src/viewdom tests docs/conf.py && ruff format src/viewdom tests docs/conf.py"

[tool.hatch.envs.pre-commit.scripts]
run = "pre-commit run --all-files --show-diff-on-failure"
install = "pre-commit install"

[tool.hatch.envs.mypy.scripts]
run = "mypy src/viewdom tests docs/conf.py"

[tool.hatch.envs.safety.scripts]
run = "hatch -e safety.py3.12 dep show requirements | safety check --full-report --stdin"

[tool.hatch.envs.docs-build.scripts]
run = "sphinx-build docs docs/_build"

[tool.ruff]
line-length = 88
extend-select = ['B','B9','C','D','E','F','N','S','W']
flake8-quotes = {inline-quotes = 'double', multiline-quotes = 'double'}
target-version = 'py311'
ignore = ['E203','E501','N802','B009','B010']

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.extend-per-file-ignores]
"tests/*" = ["S101"]
"examples/*" = ["S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
